--- a/css/styles.css
+++ b/css/styles.css
@@ -93,6 +93,10 @@ img {
     
 }
 
+@media(max-width:480px) {
+    .header__texto {
+        font-size:4rem;
+
 @media(min-width:768px) {
     .header__texto {
         margin-top: 15rem;
