--- a/css/styles.css
+++ b/css/styles.css
@@ -96,6 +96,8 @@ img {
 @media(max-width:480px) {
     .header__texto {
         font-size:4rem;
+    }
+}
 
 @media(min-width:768px) {
     .header__texto {
